[package]
name = "gexgit2"
version = "0.0.6"
edition = "2021"

description = "Extension methods for libgit2"
readme = "Readme.md"
authors = [ "NYBACHOK", "nybachokua@gmail.com"]
publish = true
license = "MIT"
repository = "https://github.com/NYBACHOK/gexgit2"
keywords=["git"]

[dependencies]
git2 = { version = "0.18.0", features = []}
url = "2.4.1"
derive_builder = "0.12.0"
thiserror = "1.0.48"
